@@ -1,3 +1,7 @@
+2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions
+
 2005-04-08  Daniel Macks  <dmacks@netspace.org>
 
 	* Engine.pm: Optimize 'fink list' with globs or multiple args.
